:zap: date time issue fixed on modal and dark mode added on ck editor

--- a/src/main.css
+++ b/src/main.css
@@ -4,46 +4,48 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: gray;
+  background: transparent;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: darkslateblue;
+  background-color: transparent;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #555;
 }
 
-.ck.ck-editor__main > .ck-editor__editable {
+.dark .ck.ck-editor__main > .ck-editor__editable {
   background-color: transparent;
   border: none;
   outline: none;
   box-shadow: none;
 }
 
-.ck.ck-editor__main > .ck-editor__editable.ck-focused {
+.dark .ck.ck-editor__main > .ck-editor__editable.ck-focused {
   border: none;
 }
 
-.ck.ck-toolbar .ck.ck-toolbar__separator {
+.dark .ck.ck-toolbar .ck.ck-toolbar__separator {
   background-color: transparent;
 }
 
-.ck.ck-toolbar.ck-toolbar_grouping {
+.dark .ck.ck-toolbar.ck-toolbar_grouping {
   background-color: transparent;
   border: none;
 }
 
-.ck.ck-button,
-.ck.ck-button.ck-on {
+.dark .ck.ck-button,
+.dark .ck.ck-button.ck-on {
   color: white;
   background-color: transparent;
 }
 
-.ck.ck-button:hover,
-.ck.ck-button.ck-off:hover,
-.ck.ck-button.ck-on:hover {
+.dark .ck.ck-button:hover,
+.dark .ck.ck-button.ck-off:hover,
+.dark .ck.ck-button.ck-on:hover {
   background-color: transparent !important;
   cursor: pointer;
   color: gray;
@@ -53,11 +55,11 @@
   background-color: black !important;
 }
 
-.ck.ck-list__item {
+.dark .ck.ck-list__item {
   background-color: black !important;
 }
 
-.ck-dropdown__panel.ck-dropdown__panel-visible .ck.ck-toolbar {
+.dark .ck-dropdown__panel.ck-dropdown__panel-visible .ck.ck-toolbar {
   border: none;
   background-color: black !important;
 }
